# multiagent-with-command

./: .cursorrules  .env.example  .gitignore  README.md  graph.py  main.py  pyproject.toml  requirements.txt  start.sh  streamlit_app.py  visualize_graph.sh  visualize_graphs.py
.docs/: about.md  features.md  implementation-plan.md
.notebooks/HITL_interrupt command/: basic_hitl_using_input.py  command.py  interrupt.ipynb  multi_turn_conversation.py  review_tool_call.ipynb
.notebooks/RAG as Agent/: basic.ipynb  classification_driven_agent.ipynb  multistep_reasoning.ipynb  rag_toolcalling.ipynb
.notebooks/supervisor command and goto commands/: subgraph.ipynb  supervisior-tools.py  supervisor-tools.ipynb  supervisoragent.ipynb
agents/: __init__.py  advisor_agent.py  appointment_agent.py  estimate_agent.py  general_agent.py  supervisor.py  support_agent.py
core/: logger.py
orchestration/: __init__.py  graph.py  nodes.py  schema.py  state.py
orchestration/advisor/: __init__.py  graph.py  nodes.py  state.py
orchestration/appointment/: __init__.py  graph.py  nodes.py  response_format.py  state.py
orchestration/estimate/: __init__.py  graph.py  nodes.py  state.py
orchestration/general/: __init__.py  graph.py  nodes.py  state.py
prompts/: appointment.md  sop_enforcer.md
schemas/: __init__.py  agent_responses.py  intent_analysis.py
tools/: __init__.py  advisor_tools.py  appointment_tools.py  estimate_tools.py  support_tools.py
utils/: __init__.py  agent_handoff.py  conversation_formatter.py  graph_visualizer.py  helper.py  llm_helpers.py
(+12 files in other folders)
